# card-sorting

./: Cargo.toml  Dioxus.toml  README.md
assets/: tailwind.css
public/: tailwind.css
src/: app.rs  main.rs  route.rs
src/components/: error_page.rs  mod.rs
src/components/home_page/: home.rs  item_card_ui.rs  mod.rs
src/models/: app_state.rs  item.rs
src/ui/components/: item_card_ui.rs  mod.rs
src/ui/pages/: home.rs  mod.rs
