[package]
name = "dd_cards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["web", "router"] }
# dioxus = { version = "0.5.0-alpha.0", features = ["web", "router"] }
manganis = "0.2.1"
wasm-bindgen = "0.2.89"
dioxus-logger = "0.4.1"
log = "0.4.20"
tracing = "0.1.40"
tracing-wasm = "0.2.1"